[package]
name = "quinn"
version = "0.2.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>", "Dirkjan Ochtman <dirkjan@ochtman.nl>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/djc/quinn"
description = "QUIC transport protocol implementation for Tokio"
readme = "../README.md"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
codecov = { repository = "djc/quinn" }
maintenance = { status = "experimental" }
travis-ci = { repository = "djc/quinn" }

[dependencies]
bytes = "0.4.7"
err-derive = "0.1.5"
fxhash = "0.2.1"
futures-preview = { version = "0.3.0-alpha.11", features = ["compat"] }
futures_01 = { version = "0.1.25", package = "futures" }
quinn-proto = { path = "../quinn-proto", version = "0.2.0" }
rand = "0.6"
rustls = { version = "0.15", features = ["quic"] }
slog = "2.1"
tokio-reactor = { git = "https://github.com/tokio-rs/tokio.git", rev = "2d3698b14dc342f412dd43febc3ab74c4ca83caf" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio.git", rev = "2d3698b14dc342f412dd43febc3ab74c4ca83caf" }
untrusted = "0.6.2"
webpki = "0.19"
webpki-roots = "0.16"
ct-logs = "0.5"
libc = "0.2.46"
mio = "0.6"

[dev-dependencies]
failure = "0.1"
slog-term = "2"
structopt = "0.2.7"
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "2d3698b14dc342f412dd43febc3ab74c4ca83caf" }
tokio-current-thread = { git = "https://github.com/tokio-rs/tokio.git", rev = "2d3698b14dc342f412dd43febc3ab74c4ca83caf" }
url = "1.7"
rcgen = "0.2"
directories = "1.0.2"

[[example]]
name = "server"

[[example]]
name = "client"
